uppercase,lowercase,titlecase pipes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-    "angular-schematics.angularDisableProjectPathCheck": true
+    "angular-schematics.angularDisableProjectPathCheck": true,
+    "angular-schematics.schematicsDefaultOptions": {
+        "angular-*": {
+            "externalTemplate": true,
+            "skipStyle": true
+        },
+        "angular-component": {
+            "skipChangeDetectionOnPush": true
+        }
+    }
 }
