--- a/09-teslo-shop/tsconfig.json
+++ b/09-teslo-shop/tsconfig.json
@@ -3,6 +3,15 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl":"./",
+    "paths": {
+  //    "@/*":["./src/app/*"],
+      "@auth/*":["./src/app/auth/*"],
+      "@dashboard/*":["./src/app/admin-dashboard/*"],
+      "@products/*":["./src/app/products/*"],
+      "@/shared*":["./src/app/shared/*"],
+      "@/store-front*":["./src/app/store-front/*"],
+    },
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
